# feedlycli

./: .clang-format  .gitignore  CMakeLists.txt
include/clients/: Client.hpp
include/cui/views/: Application.hpp  CategoriesView.hpp  Component.hpp  PostsView.hpp  utils.hpp
include/curses/components/: Categories.hpp  Menu.hpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/clients/: CMakeLists.txt
src/clients/feedly/: CMakeLists.txt  Client.cpp
src/cui/: CMakeLists.txt
src/cui/views/: Application.cpp  CMakeLists.txt  CategoriesView.cpp  PostsView.cpp  utils.cpp
src/curses/: CMakeLists.txt
src/curses/components/: CMakeLists.txt  Categories.cpp  Menu.cpp
tests/: CMakeLists.txt
tests/acceptance/: CMakeLists.txt  FeedlyClient.cpp
tests/unit/: CMakeLists.txt  FeedlyClient.cpp
